# mcp-recall-md

./: .gitignore  README.md  build.bat  mcp-recall-md.spec  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
src/mcp_recall_md/: __init__.py  __main__.py  chroma_backend.py  config.py  log.py  server.py  watcher.py
tests/: test_backend.py  test_e2e.py  test_watcher.py
